# gtc-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py
